updated project 1 page

--- a/project3.html
+++ b/project3.html
@@ -37,17 +37,17 @@
 				<img class="mb-3 mx-auto logo" src="images/UST.svg" alt="logo">
 
 				<ul class="navbar-nav flex-column text-sm-center text-md-left">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html"><i class="fas fa-home fa-fw mr-2"></i>Blog Home <span
-								class="sr-only">(current)</span></a>
+							class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="project1.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 1 </a>
+						<a class="nav-link" href="project1.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 1</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="project2.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 2 </a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="project3.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 3 </a>
 					</li>
 				</ul>
@@ -59,41 +59,30 @@
 
 	<div class="main-wrapper">
 		<header class="page-title theme-bg-light text-center gradient py-5">
-			<h1 class="heading">Welcome To My Personal Portfolio Page!</h1>
+			<h1 class="heading">-</h1>
 		</header>
-		<article class="content px-3 py-5 p-md-5">
-			<div class='container'>
-				<article class="mt-3 lead">
-					<h3 class="">About Me</h3>
-					<p>
-						Hello and welcome to my COMP4461 personal portfolio page! My name is Chan Tsz Hong,
-						or you can call me Bosco. I am an undergraduate student at the Hong Kong University of Science
-						and
-						Technology (HKUST), majoring in Computer Engineering. Through this course, I aim to deepen my
-						understanding of user-centered design and improve my skills in creating intuitive and engaging
-						interfaces.
-					</p>
-					<h3 class="mt-4">My Experiences</h3>
-					<p class=""> 
-						I have experience with various programming languages, including JavaScript and Python, and have
-						worked on several projects that involve web development and user experience design. My goal is
-						to
-						leverage my knowledge and skills to contribute to innovative solutions that enhance user
-						experiences.
-					</p>
-					<h5>
-						Feel free to explore my portfolio and learn more about my projects and experiences.
-					</h5>
-				</article>
-
+		<article class="about-section content px-3 py-5 p-md-5">
+			<div class="container">
+				<p>To be added.</p>
+				<!-- <figure><img class="img-fluid" src="images/about-me.jpg" alt="image"></figure> -->
+				<!-- <h5 class="mt-5">-</h5>
+				<p>-</p>
+				<h5 class="mt-5">-</h5>
+				<p>-</p>
+				<h5 class="mt-5">-</h5>
+				<p>-</p> -->
+			</div>
 		</article>
+
+
+
 		<footer class="footer text-center py-2 theme-bg-dark">
 
 			<p class="copyright"><a href="https://youtube.com/FollowAndrew">Template provided by FollowAndrew</a></p>
 
 		</footer>
 
-	</div>
+	</div><!--//main-wrapper-->
 
 
 	<!-- Bootstrap Javascript -->
