--- a/project1.html
+++ b/project1.html
@@ -96,6 +96,11 @@
 				<figure><img class="img-fluid" src="images/project1/interview2.png" alt="image"></figure>
 				<p>(Screenshot of me interviewing two international students. Due to the file size restriction, I didn't
 					upload the whole video. Feel free to ask me for the video if you want to watch the source.)</p>
+				<div class="" style="display: flex;">
+					<figure><img class="img-fluid" src="images/project1/site1.jpg" alt="image"></figure>
+					<figure><img class="img-fluid" src="images/project1/site2.jpg" alt="image"></figure>	
+				</div>
+				<p>(Picture records of me and my groupmates visiting the campus.)</p>
 
 				<h3 class="mt-5">My Personal Contributions and Achievements</h3>
 				<p>During the needfinding phase, I actively participated in interviewing and recording the results. I
@@ -133,7 +138,14 @@
 					impossible to introduce an effective solution. Therefore, I have learned that whenever I am trying
 					to solve a problem, I will strive to clarify the problem by emphasizing the user's perspective.</p>
 
+				<h3 class="mt-5">AI Usage</h3>
+				<p>
+					We have used AI in our project to give us some starting ideas. You can refer to the conversation below:
+					<a target="_blank" href="https://poe.com/s/XSybo2bJeBpY2mAuW81b">https://poe.com/s/XSybo2bJeBpY2mAuW81b</a>
+				</p>
+
 			</div>
+
 		</article>
 
 		<footer class="footer text-center py-2 theme-bg-dark">
