--- a/project1.html
+++ b/project1.html
@@ -62,11 +62,11 @@
 
 	<div class="main-wrapper">
 		<header class="page-title theme-bg-light text-center gradient py-5">
-			<h1 class="heading">Make the campus more friendly for visiting students from the animal kingdom</h1>
+			<h1 class="heading">Make the Campus More Friendly for Visiting Students from the Animal Kingdom</h1>
 		</header>
 		<article class="about-section content px-3 py-5 p-md-5">
 			<div class="container">
-				<h3 class="">Description of the Project and My Goal</h3>
+				<h2 class="">Description of the Project and My Goal</h2>
 				<p>This is the first project in the course, the theme is that we will have
 					visiting students from the
 					animal kingdom and explore how our campus can become more welcoming to them. This project consists
@@ -76,7 +76,7 @@
 					view. I believe that this mindset can help me design more user-friendly products and develop
 					important skills for my career, especially when I am aiming to be a web developer and designer.</p>
 
-				<h3 class="mt-5">My Learning and Execution Process</h3>
+				<h2 class="mt-5">My Learning and Execution Process</h2>
 				<p>We began by identifying potential issues, such as small animals struggling with stairs, and conducted
 					site visits to verify our thoughts. We interviewed seven people, gathering insights like dogs having
 					difficulty seeing road signs due to their height and color blindness. In this process, we found out
@@ -102,7 +102,7 @@
 				</div>
 				<p>(Picture records of me and my groupmates visiting the campus.)</p>
 
-				<h3 class="mt-5">My Personal Contributions and Achievements</h3>
+				<h2 class="mt-5">My Personal Contributions and Achievements</h2>
 				<p>During the needfinding phase, I actively participated in interviewing and recording the results. I
 					interviewed a student from the Civil Engineering department who provided the insight that cats might
 					struggle to catch fish for their meals. Inspired by this, I brought the idea into the next phase. In
@@ -121,7 +121,7 @@
 				<figure><img class="img-fluid" src="images/project1/mindmap.jpg" alt="image"></figure>
 				<p>(Image of our mindmap.)</p>
 
-				<h3 class="mt-5">My Personal Reflection</h3>
+				<h2 class="mt-5">My Personal Reflection</h2>
 				<p>Through this project, I have gained valuable knowledge about the importance of collaboration and
 					using a design thinking approach to solve existing problems as a team. Specifically, I learned that
 					the emphasis on empathy in this approach helps me think from the user's perspective and address real
@@ -138,7 +138,7 @@
 					impossible to introduce an effective solution. Therefore, I have learned that whenever I am trying
 					to solve a problem, I will strive to clarify the problem by emphasizing the user's perspective.</p>
 
-				<h3 class="mt-5">AI Usage</h3>
+				<h2 class="mt-5">AI Usage</h2>
 				<p>
 					We have used AI in our project to give us some starting ideas. You can refer to the conversation below:
 					<a target="_blank" href="https://poe.com/s/XSybo2bJeBpY2mAuW81b">https://poe.com/s/XSybo2bJeBpY2mAuW81b</a>
