--- a/project2.html
+++ b/project2.html
@@ -172,7 +172,7 @@
 				<h2 class="mt-5">AI Usage</h2>
 				<p>
 					We have used AI in our project to give us some starting ideas. You can refer to the conversation below:
-					<a target="_blank" href="-">-</a>
+					<a target="_blank" href="">-</a>
 				</p>
 
 			</div>
