--- a/project2.html
+++ b/project2.html
@@ -169,11 +169,11 @@
 				</figure>
 				<p>(Picture of my friend participating in the user testing.)</p>
 
-				<h2 class="mt-5">AI Usage</h2>
+				<!-- <h2 class="mt-5">AI Usage</h2>
 				<p>
 					We have used AI in our project to give us some starting ideas. You can refer to the conversation below:
 					<a target="_blank" href="">-</a>
-				</p>
+				</p> -->
 
 			</div>
 		</article>
