added user testing

--- a/project2.html
+++ b/project2.html
@@ -106,6 +106,13 @@
 					easy task of creating a map of the theme park, which I will discuss in more detail in the next
 					section.
 				</p>
+				<p>
+					During user testing, we received positive feedback on several features of our agent. Users
+					appreciated the emergency mode, the shortest path feature, and the crowd level information. They
+					also found the navigation accuracy, lost item reporting, and facility information to be very
+					helpful. However, users pointed out that the LLM responses were not natural enough for voice output,
+					indicating a need for more conversational and natural-sounding interactions.
+				</p>
 				<figure><img class="img-fluid" src="images/project2/picture1.jpg" alt="image"></figure>
 				<p>(Picture of me interviewing a student in campus. We didn't record his face due to his request.)</p>
 				<figure><img class="img-fluid" src="images/project2/picture2.jpg" alt="image" style="width: 50%;">
