--- a/project3.html
+++ b/project3.html
@@ -39,16 +39,19 @@
 				<ul class="navbar-nav flex-column text-sm-center text-md-left">
 					<li class="nav-item">
 						<a class="nav-link" href="index.html"><i class="fas fa-home fa-fw mr-2"></i>Blog Home <span
-							class="sr-only">(current)</span></a>
+								class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="project1.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 1</a>
+						<a class="nav-link" href="project1.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project
+							1</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="project2.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 2 </a>
+						<a class="nav-link" href="project2.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 2
+						</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="project3.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 3 </a>
+						<a class="nav-link" href="project3.html"><i class="fas fa-file-image fa-fw mr-2"></i>Project 3
+						</a>
 					</li>
 				</ul>
 				<hr>
@@ -59,18 +62,111 @@
 
 	<div class="main-wrapper">
 		<header class="page-title theme-bg-light text-center gradient py-5">
-			<h1 class="heading">-</h1>
+			<h1 class="heading">Social Extended Reality (XR) for Local Community: Second Hand Furniture Platform</h1>
 		</header>
 		<article class="about-section content px-3 py-5 p-md-5">
 			<div class="container">
-				<p>To be added.</p>
-				<!-- <figure><img class="img-fluid" src="images/about-me.jpg" alt="image"></figure> -->
-				<!-- <h5 class="mt-5">-</h5>
-				<p>-</p>
-				<h5 class="mt-5">-</h5>
-				<p>-</p>
-				<h5 class="mt-5">-</h5>
-				<p>-</p> -->
+				<h2 class="">Description of the Project and My Goal</h2>
+				<p>
+					Our group project focuses on enhancing the experience of trading second-hand furniture through the
+					integration of Extended Reality (XR) technologies, specifically Augmented Reality (AR) and Virtual
+					Reality (VR). The platform we are developing allows buyers to preview furniture in an immersive and
+					interactive way using AR, enabling them to visualize how items would look and fit within their own
+					living spaces. This helps address common concerns such as size, style compatibility, and condition
+					of the furniture. On the seller's side, the platform provides tools to scan and upload 3D models of
+					their furniture into a virtual marketplace built with Unity. This virtual environment serves as a
+					dynamic and engaging medium for showcasing items and facilitating transactions. My personal goal in
+					this project is to explore the various interaction methods and design approaches within XR, and to
+					understand how these technologies can address limitations found in traditional, physical trading
+					environments. I am particularly interested in how XR can bridge the gap between digital and physical
+					spaces to create more intuitive and effective user experiences.
+				</p>
+
+				<h2 class="">My Learning and Execution Process</h2>
+				<p>Our team spent the first day brainstorming ideas but initially struggled to reach a consensus due to
+					the broad scope of the project topic. Eventually, one of my teammates, Luffy, proposed focusing on
+					second-hand furniture trading, highlighting several issues he had observed in existing systems.
+					Since we couldn't settle on a better idea at the time, we agreed to explore this direction further.
+					We began by distributing a survey to gather user insights and received 17 responses. Interestingly,
+					around 90% of respondents had experience buying or selling second-hand furniture in Hong Kong,
+					confirming the relevance of our chosen theme. From their qualitative feedback, we identified five
+					major challenges: size and fit issues, quality and condition, logistics and delivery, pricing
+					concerns, and trust and communication. Our project aimed to address the first three challenges
+					through XR technologies.
+				</p>
+				<p>
+					To better understand user's needs, we asked participants about their expectations. The top needs
+					include the ability to visualize furniture in their own space and to preview 3D models using AR
+					instead of static photos. To validate these findings, we visited a physical furniture store near
+					Prince Edward Station. This visit confirmed several pain points, such as the time cost of traveling
+					and the inability to preview how furniture would look in a home setting. We then moved into the
+					ideation phase, using mind maps and user personas to shape our solution. We also analyzed existing
+					platforms through storyboarding and conducted speed dating sessions with potential users to refine
+					our concept.
+				</p>
+				<p>
+					Once we finalized our idea, we transitioned to prototyping. We built a virtual marketplace using
+					Unity and published it on Spatial.io. To support sellers, we developed a mobile app that converts
+					furniture photos into 3D models, which can then be uploaded to the virtual market. Buyers can
+					download these models and use AR to visualize them in their own rooms, improving their understanding
+					of the furniture's condition and fit. After completing our prototype, we conducted usability
+					testing. The feedback was largely positive—users found the concept innovative and practical for
+					solving the identified issues. However, some noted that the AR features could be improved in terms
+					of accuracy, which we recognized as an area for future enhancement.
+				</p>
+				<figure><img class="img-fluid" src="images/project3/picture1.png" alt="image"></figure>
+				<p>(Picture of survey feedback.)</p>
+				<figure><img class="img-fluid" src="images/project3/picture2.png" alt="image"></figure>
+				<p>(Picture of the 5 major challenges of the existing solutions.)</p>
+				<figure><img class="img-fluid" src="images/project3/picture3.png" alt="image"></figure>
+				<p>(Picture of the physical furniture shop.)</p>
+				<figure><img class="img-fluid" src="images/project3/picture5.png" alt="image"></figure>
+				<p>(Picture of the story board.)</p>
+				<figure><img class="img-fluid" src="images/project3/picture6.png" alt="image"></figure>
+				<p>(Screenshot of the qualitative feedback interview.)</p>
+
+				<h2 class="mt-5">My Personal Contributions and Achievements</h2>
+				<P>
+					In this project, my primary responsibility was centered around the empathy phase, where I focused on
+					understanding user needs and translating them into actionable insights for our solution. I designed
+					and distributed a Google Form to collect responses from potential users, and then systematically
+					organized and analyzed the feedback to identify key pain points and expectations. This process
+					helped us define a user-centric direction for our platform.
+				</P>
+				<p>
+					To evaluate existing solutions and identify areas for improvement, I applied the GOMS (Goals,
+					Operators, Methods, and Selection rules) model. This allowed us to compare the efficiency and
+					usability of current platforms and extract both their strengths and limitations. These insights
+					directly informed the design of our own solution, ensuring it addressed common user frustrations
+					while incorporating effective features from existing systems.
+				</p>
+				<p>
+					Additionally, I contributed to the ideation phase by constructing a detailed mind map that helped
+					visualize and organize potential features for our platform. This collaborative process enabled our
+					team to explore a wide range of ideas and refine them into a cohesive and innovative solution.
+					Through these contributions, I gained valuable experience in user research, interaction analysis,
+					and early-stage design thinking.
+				</p>
+				<figure><img class="img-fluid" src="images/project3/picture4.png" alt="image"></figure>
+				<p>(Picture of the mind map.)</p>
+
+				<h2 class="mt-5">My Personal Reflection</h2>
+				<p>
+					Through this project, I gained valuable insights into the potential of Extended Reality (XR) within
+					the field of Human-Computer Interaction. I learned how XR technologies, such as AR and VR, can be
+					applied to solve real-world problems that traditional physical solutions alone cannot
+					address—particularly in areas like visualization, spatial understanding, and user engagement. This
+					experience deepened my appreciation for the unique strengths of XR in enhancing user experiences and
+					bridging the gap between digital and physical environments.
+				</p>
+				<p>
+					Additionally, I developed a better understanding of how to design XR solutions that are both
+					user-friendly and effective. From conducting user research to prototyping and testing, I learned the
+					importance of grounding design decisions in real user needs and feedback. This project not only
+					strengthened my technical and analytical skills but also helped me grow as a computer engineer who
+					is more empathetic, thoughtful, and solution oriented.
+				</p>
+
 			</div>
 		</article>
 
